# przepisy

./: readme.md
przepisy/: .env  .gitignore  Cargo.toml  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js  tailwind.css
przepisy/src/: api.rs  app.rs  main.rs  models.rs
przepisy/src-tauri/: 2  Cargo.toml  tauri.conf.json
przepisy/src-tauri/src/: commands.rs  lib.rs  main.rs
przepisy/src/components/: login.rs  mod.rs  page.rs  recipe_card.rs  recipe_detail.rs  settings.rs
przepisy/src/enums/: currentview.rs  mod.rs  theme.rs
