[package]
name = "przepisy-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
dotenv_codegen = "0.15.0"
serde_json = "1.0.145"
regex = "1.12.2"
reqwest = "0.12.25"
gloo-storage = "0.3"

[workspace]
members = ["src-tauri"]
