[package]
name = "przepisy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "przepisy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leptos = { version = "0.7.0-beta.4", features = ["csr"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
android_logger = "0.13"
dotenv_codegen = "0.15.0"
tauri-plugin-shell = "2.3.3"
